pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.4-alpine
        volumeMounts:
        - mountPath: /usr/share/nginx
          name: www-data
          readOnly: true
        ports:
        - containerPort: 80
      volumes:
      - name: www-data
        emptyDir: {}
